# OpenLimit

./: .gitattributes  .gitignore  AIV_FRAMEWORK_v5.3.md  CHANGELOG.md  COMPREHENSIVE_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  STATE.md  config.json  events.jsonl  go.mod  go.sum
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
cmd/bench/: bench_test.go  main.go  sbc_bench_test.go
cmd/doctor/: doctor_test.go  main.go
cmd/gateway/: main.go  main_test.go
cmd/init/: generator.go  generator_test.go  main.go  wizard.go  wizard_test.go
cmd/mcp/: catalog.go  config_writer.go  main.go  mcp_test.go  search.go  search_test.go
cmd/test/: main.go  test_test.go
configs/: gateway.docker.yaml  gateway.example.yaml  gateway.yaml
deploy/: docker-compose.yml
deploy/grafana/: openlimit-dashboard.json
deploy/helm/: test.sh
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: agent-protocols.md  api-reference.md  configuration.md  deployment.md  getting-started.md  governance.md  index.md  migration-v1.0.md  migration-v1.1.md  observability.md  plugins.md  security.md  troubleshooting.md
docs/aiv/: ROADMAP.md  STATE.md
docs/openapi/: README.md  admin-api.yaml
internal/admin/: audit.go  dashboard.go  (+26 more)
scripts/: ensure-config.sh  generate-dashboard.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/openlimit/: __init__.py  admin.py  client.py  errors.py  streaming.py  types.py
sdks/python/src/openlimit.egg-info/: PKG-INFO  SOURCES.txt
sdks/python/tests/: test_admin.py  test_client.py
(+265 files in other folders)
